增加交通工具站名與每日天氣預報
1. 交通工具站名補充：
   Day 1:
   - 機場客運：熊本機場國內線 → 熊本交通中心（熊本駅前）
   - 熊本市電：辛島町站 → 熊本城・市役所前站
   - 熊本市電：熊本城・市役所前站 → 通町筋站

   Day 7:
   - 福岡市地下鐵空港線：博多站 → 福岡機場站

2. 每日天氣預報（2月中下旬）：
   Day 1 熊本：6-13°C，多雲時晴，降雨20%
   Day 2 阿蘇・高千穗：2-10°C，晴時多雲，降雨10%，山區降雪5%
   Day 3 高千穗・黑川：1-9°C，晴天，降雨10%，降雪5%
   Day 4 別府：5-12°C，多雲，降雨20%
   Day 5 由布院：3-11°C，晴天，降雨10%
   Day 6 太宰府・福岡：6-13°C，多雲時晴，降雨20%
   Day 7 福岡：7-14°C，晴天，降雨10%

   採用漸層色彩設計，每天不同配色方便辨識

--- a/index.html
+++ b/index.html
@@ -346,6 +346,15 @@
                 </div>
                 <span class="accommodation-badge">🏨 宿：熊本</span>
             </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #E3F2FD, #BBDEFB); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #2196F3;">
+                <h4 style="margin: 0 0 10px 0; color: #1565C0; font-size: 1rem;">🌤️ 熊本天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>6°C ~ 13°C</div>
+                    <div>☁️ <strong>天氣：</strong>多雲時晴</div>
+                    <div>💧 <strong>降雨機率：</strong>20%</div>
+                    <div>❄️ <strong>降雪機率：</strong>0%</div>
+                </div>
+            </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">OMO5 熊本 by 星野集團</a> | <a href="https://hoshinoresorts.com/CH/hotels/0000000314/rooms/0000000003" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
@@ -369,7 +378,8 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line">🚌 機場客運 約50分鐘 ¥800 → 熊本交通中心</div>
+                    <div class="transport-line">🚌 機場客運 約50分鐘 ¥800<br>
+                    <span style="font-size: 0.85em; opacity: 0.9;">熊本機場國內線 → 熊本交通中心（熊本駅前）</span></div>
                 </div>
 
                 <div class="event">
@@ -384,7 +394,8 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line train">🚃 路面電車 約15分鐘 ¥170 → 熊本城前</div>
+                    <div class="transport-line train">🚃 熊本市電 約15分鐘 ¥170<br>
+                    <span style="font-size: 0.85em; opacity: 0.9;">辛島町站 → 熊本城・市役所前站</span></div>
                 </div>
 
                 <div class="event">
@@ -416,7 +427,8 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約15分鐘 或 路面電車</div>
+                    <div class="transport-line walk">🚶 步行 約15分鐘<br>
+                    <span style="font-size: 0.85em; opacity: 0.9;">或搭熊本市電：熊本城・市役所前 → 辛島町（¥170）</span></div>
                 </div>
 
                 <div class="event">
@@ -455,7 +467,8 @@
                 </div>
 
                  <div class="transport-between">
-                     <div class="transport-line train">🚃 路面電車 約10分鐘 ¥170 → 銀座通</div>
+                     <div class="transport-line train">🚃 熊本市電 約10分鐘 ¥170<br>
+                     <span style="font-size: 0.85em; opacity: 0.9;">熊本城・市役所前站 → 通町筋站</span></div>
                  </div>
 
                  <div class="event">
@@ -530,6 +543,15 @@
                     <span class="date">2月17日（二）</span>
                 </div>
                 <span class="accommodation-badge">🏨 宿：高千穗</span>
+            </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #FFF3E0, #FFE0B2); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #FF9800;">
+                <h4 style="margin: 0 0 10px 0; color: #E65100; font-size: 1rem;">🌤️ 阿蘇・高千穗天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>2°C ~ 10°C</div>
+                    <div>☁️ <strong>天氣：</strong>晴時多雲</div>
+                    <div>💧 <strong>降雨機率：</strong>10%</div>
+                    <div>❄️ <strong>降雪機率：</strong>5%（山區）</div>
+                </div>
             </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=SOLEST高千穂ホテル" target="_blank">SOLEST 高千穗飯店</a> | <a href="https://www.agoda.com/sl/eQk4YiI18Ko" target="_blank" style="font-size: 0.85em;">Agoda</a></h4>
@@ -770,6 +792,15 @@
                 </div>
                 <span class="accommodation-badge">🏨 宿：黑川溫泉</span>
             </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #E8F5E9, #C8E6C9); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #4CAF50;">
+                <h4 style="margin: 0 0 10px 0; color: #2E7D32; font-size: 1rem;">🌤️ 高千穗・黑川溫泉天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>1°C ~ 9°C</div>
+                    <div>☁️ <strong>天氣：</strong>晴天</div>
+                    <div>💧 <strong>降雨機率：</strong>10%</div>
+                    <div>❄️ <strong>降雪機率：</strong>5%</div>
+                </div>
+            </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=黒川温泉+旅館わかば" target="_blank">若葉日式旅館 Ryokan Wakaba</a> | <a href="https://www.booking.com/hotel/jp/ryokan-wakaba.zh-tw.html" target="_blank" style="font-size: 0.85em;">Booking</a></h4>
                 <div class="hotel-details">
@@ -950,6 +981,15 @@
                     <span class="date">2月19日（四）</span>
                 </div>
                 <span class="accommodation-badge">🏨 宿：別府</span>
+            </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #FCE4EC, #F8BBD0); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #E91E63;">
+                <h4 style="margin: 0 0 10px 0; color: #C2185B; font-size: 1rem;">🌤️ 別府天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>5°C ~ 12°C</div>
+                    <div>☁️ <strong>天氣：</strong>多雲</div>
+                    <div>💧 <strong>降雨機率：</strong>20%</div>
+                    <div>❄️ <strong>降雪機率：</strong>0%</div>
+                </div>
             </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank">別府站前超級飯店 Super Hotel</a> | <a href="https://go-superhotel.reservation.jp/zh-tw/hotels/sh-beppu" target="_blank" style="font-size: 0.85em;">官網</a></h4>
@@ -1168,6 +1208,15 @@
                 </div>
                 <span class="accommodation-badge">🏨 宿：由布院</span>
             </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #F3E5F5, #E1BEE7); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #9C27B0;">
+                <h4 style="margin: 0 0 10px 0; color: #6A1B9A; font-size: 1rem;">🌤️ 由布院天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>3°C ~ 11°C</div>
+                    <div>☁️ <strong>天氣：</strong>晴天</div>
+                    <div>💧 <strong>降雨機率：</strong>10%</div>
+                    <div>❄️ <strong>降雪機率：</strong>0%</div>
+                </div>
+            </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank">溫柔之鄉 Yawaraginosato Yadoya</a> | <a href="https://www.yawaraginosato.com/zh-tw/" target="_blank" style="font-size: 0.85em;">官網</a></h4>
                 <div class="hotel-details">
@@ -1321,6 +1370,15 @@
                     <span class="date">2月21日（六）</span>
                 </div>
                 <span class="accommodation-badge">🏨 宿：福岡</span>
+            </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #E0F2F1, #B2DFDB); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #009688;">
+                <h4 style="margin: 0 0 10px 0; color: #00695C; font-size: 1rem;">🌤️ 太宰府・福岡天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>6°C ~ 13°C</div>
+                    <div>☁️ <strong>天氣：</strong>多雲時晴</div>
+                    <div>💧 <strong>降雨機率：</strong>20%</div>
+                    <div>❄️ <strong>降雪機率：</strong>0%</div>
+                </div>
             </div>
             <div class="hotel-info">
                 <h4>🏨 <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank">東橫INN 博多口站前</a> | <a href="https://www.toyoko-inn.com/china/search/detail/00043" target="_blank" style="font-size: 0.85em;">官網</a></h4>
@@ -1566,6 +1624,15 @@
                 </div>
                 <span class="accommodation-badge">✈️ 19:10 返程</span>
             </div>
+            <div class="weather-info" style="background: linear-gradient(135deg, #FFF9C4, #FFF59D); padding: 15px; margin: 15px 0; border-radius: 12px; border-left: 4px solid #FBC02D;">
+                <h4 style="margin: 0 0 10px 0; color: #F57F17; font-size: 1rem;">🌤️ 福岡天氣預報</h4>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 10px; font-size: 0.9rem; color: #424242;">
+                    <div>🌡️ <strong>氣溫：</strong>7°C ~ 14°C</div>
+                    <div>☁️ <strong>天氣：</strong>晴天</div>
+                    <div>💧 <strong>降雨機率：</strong>10%</div>
+                    <div>❄️ <strong>降雪機率：</strong>0%</div>
+                </div>
+            </div>
              <div class="timeline">
                  <div class="event">
                      <div class="event-time">08:00 - 09:00</div>
@@ -1674,7 +1741,8 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line train">🚇 地下鐵 約5分鐘 ¥260 → 福岡機場</div>
+                    <div class="transport-line train">🚇 福岡市地下鐵空港線 約5分鐘 ¥260<br>
+                    <span style="font-size: 0.85em; opacity: 0.9;">博多站 → 福岡機場站（國內線・國際線）</span></div>
                 </div>
 
                  <div class="event">
