Day 1 交通更新：改為機場利木津巴士
變更內容：
- 交通工具：機場客運 → 機場利木津巴士
- 乘車處：熊本機場 1F 入境大廳外 4號站牌（往熊本市內方向）
- 下車站：通町筋站（Torichosuji），步行約3分鐘至 OMO5
- 車程：約 40-50 分鐘
- 票價：成人 ¥1,200（可使用 IC 卡如 Suica, ICOCA）
- 班次：約每 15-20 分鐘一班

預算調整：
- 巴士費用（4人）：¥3,200 → ¥4,800
- Day 1 總預算：NT$ 5,755 → NT$ 6,111

新增注意事項：
- 詳細乘車資訊與付款方式說明

--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line">🚌 機場客運 約50分鐘 ¥800<br>
-                    <span style="font-size: 0.85em; opacity: 0.9;">熊本機場國內線 → 熊本交通中心（熊本駅前）</span></div>
+                    <div class="transport-line">🚌 機場利木津巴士 約40-50分鐘 ¥1,200<br>
+                    <span style="font-size: 0.85em; opacity: 0.9;">熊本機場 1F 4號站牌 → 通町筋站（OMO5步行3分鐘）</span></div>
                 </div>
 
                 <div class="event">
@@ -521,17 +521,26 @@
                      </div>
                  </div>
              </div>
+             <div class="notes">
+                 <h4>注意事項</h4>
+                 <ul>
+                     <li><strong>機場利木津巴士：</strong>乘車處在熊本機場 1F 入境大廳外 4號站牌（往熊本市內方向）</li>
+                     <li><strong>下車站：</strong>「通町筋」（Torichosuji）站，下車後步行約3分鐘至 OMO5</li>
+                     <li><strong>班次：</strong>約每 15-20 分鐘一班，非常密集</li>
+                     <li><strong>付款方式：</strong>可使用 IC 卡（Suica, ICOCA 等）或現金</li>
+                 </ul>
+             </div>
              <div class="budget-card">
                  <h4>💰 Day 1 預算估算（4人）</h4>
                  <table>
-                     <tr><td>🚌 機場客運（4人）</td><td>¥3,200 (約 NT$ 700)</td></tr>
+                     <tr><td>🚌 機場利木津巴士（4人）</td><td>¥4,800 (約 NT$ 1,056)</td></tr>
                      <tr><td>🚃 路面電車（4人往返）</td><td>¥680 (約 NT$ 150)</td></tr>
                      <tr><td>🍱 午餐（市區快餐）</td><td>¥4,000 (約 NT$ 880)</td></tr>
                      <tr><td>🏯 熊本城門票（2大2小）</td><td>¥1,300 (約 NT$ 285)</td></tr>
                      <tr><td>🥩 晚餐 馬櫻</td><td>¥12,000 (約 NT$ 2,640)</td></tr>
                      <tr><td>🛒 唐吉軻德購物</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 5,755（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 6,111（不含住宿）</div>
              </div>
          </div>
 
