新增馬櫻餐廳訂位資訊
Day 1 晚餐：馬櫻 銀座通店
- 預訂日期：2026年2月16日（一）18:30
- 預訂人數：4名（2大人2兒童）
- 預訂者：YAJU YO

--- a/index.html
+++ b/index.html
@@ -484,7 +484,11 @@
                             📞 預約電話：<a href="tel:096-322-1234">096-322-1234</a><br>
                             🌐 官網：<a href="https://umasakura.jp/" target="_blank">umasakura.jp</a><br>
                             🕐 營業時間：17:00～23:00（L.O. 22:30）<br>
-                            📅 定休日：週日
+                            📅 定休日：週日<br><br>
+                            <strong>✅ 已預訂：</strong><br>
+                            📅 預訂日期：2026年2月16日（一）18:30<br>
+                            👥 預訂人數：4名（2大人2兒童）<br>
+                            📝 預訂者：YAJU YO
                         </div>
                      </div>
                  </div>
