新增高千穗峽划船預約資訊
Day 3：高千穗峽划船（2艘船）
- 預約日期：2026年2月18日（三）09:30

預約1：
- 預約者：YO YAJU
- 預約編號：X8V8R89W
- 參考編號：00002
- 金額：¥4,100

預約2：
- 預約者：邱成偉
- 預約編號：AIJGLFT5
- 參考編號：00003

取消截止：預約日期前2天上午9:00

--- a/index.html
+++ b/index.html
@@ -853,7 +853,19 @@
                         <div class="reservation-info">
                             📞 預約電話：<a href="tel:0982-73-1213">0982-73-1213</a><br>
                             🌐 預約網站：<a href="https://takachiho-kanko.info/boat/" target="_blank">takachiho-kanko.info/boat</a><br>
-                            ⚠️ 冬季可能因天候暫停，請事先確認
+                            ⚠️ 冬季可能因天候暫停，請事先確認<br><br>
+                            <strong>✅ 已預訂（2艘船）：</strong><br>
+                            📅 預約日期：2026年2月18日（三）09:30<br><br>
+                            <strong>預約1：</strong><br>
+                            📝 預約者：YO YAJU<br>
+                            🎫 預約編號：X8V8R89W<br>
+                            🔢 參考編號：00002<br>
+                            💴 金額：¥4,100<br><br>
+                            <strong>預約2：</strong><br>
+                            📝 預約者：邱成偉<br>
+                            🎫 預約編號：AIJGLFT5<br>
+                            🔢 參考編號：00003<br><br>
+                            ⏰ <strong>取消截止：</strong>預約日期前2天上午9:00
                         </div>
                         <div class="parking-info">
                             🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=高千穂峡駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">高千穗峽公共停車場</a><br>
