更新餐廳名稱為日文

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <div class="event-time">16:50 - 17:50</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍱 <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank">櫻之馬場城彩苑</a></h3>
+                            <h3>🍱 <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank">桜の馬場 城彩苑</a></h3>
                         </div>
                         <p class="event-desc">城下町風情商店街，選購伴手禮與品嚐特色小吃</p>
                         <a href="https://maps.google.com/?q=桜の馬場城彩苑" target="_blank" class="map-link">📍 Google Map</a>
@@ -760,7 +760,7 @@
                     <div class="event-time">19:00 - 20:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🥩 <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank">晚餐：高千穂牛レストラン和</a></h3>
+                            <h3>🥩 <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank">晚餐：高千穂牛レストラン 和（なごみ）</a></h3>
                         </div>
                         <p class="event-desc">品嚐當地高千穗牛燒肉，鮮嫩多汁的在地美食</p>
                         <a href="https://maps.google.com/?q=高千穂牛レストラン和" target="_blank" class="map-link">📍 Google Map</a>
