新增出發前確認事項區塊

--- a/index.html
+++ b/index.html
@@ -318,6 +318,47 @@
             <div class="departure-info">📍 出發地點：新北市板橋區</div>
         </header>
 
+        <!-- Pre-Departure Checklist -->
+        <div class="emergency-card" style="border-color: #FF9800;">
+            <h3 style="color: #FF9800;">📋 出發前確認事項</h3>
+            <div class="emergency-grid">
+                <div class="emergency-item" style="background: linear-gradient(135deg, #FFF3E0, #FFE0B2); border-left-color: #FF9800;">
+                    <h4 style="color: #E65100;">🌋 阿蘇火山開放狀況</h4>
+                    <p>⏰ <strong>確認時間：</strong>出發前 1-2 天</p>
+                    <p>🌐 <strong>查詢網站：</strong><br>
+                    <a href="https://www.aso-volcano.jp/" target="_blank">www.aso-volcano.jp</a></p>
+                    <p>📅 <strong>相關日期：</strong>Day 2 (2/17 週二)</p>
+                    <p>⚠️ 目前火口處於規制狀態，請確認最新開放情況</p>
+                </div>
+                <div class="emergency-item" style="background: linear-gradient(135deg, #E1F5FE, #B3E5FC); border-left-color: #0288D1;">
+                    <h4 style="color: #01579B;">🚣 高千穗峽天氣確認</h4>
+                    <p>⏰ <strong>確認時間：</strong>出發前 1-3 天</p>
+                    <p>🌐 <strong>查詢網站：</strong><br>
+                    <a href="https://takachiho-kanko.info/boat/" target="_blank">高千穗峽划船官網</a></p>
+                    <p>📅 <strong>相關日期：</strong>Day 3 (2/18 週三) 09:30</p>
+                    <p>⚠️ 划船受天候影響，惡劣天氣將停止營運</p>
+                    <p>📞 <strong>確認電話：</strong><a href="tel:0982-73-1213">0982-73-1213</a></p>
+                </div>
+                <div class="emergency-item" style="background: linear-gradient(135deg, #F3E5F5, #E1BEE7); border-left-color: #7B1FA2;">
+                    <h4 style="color: #4A148C;">🦁 九州自然動物園確認</h4>
+                    <p>⏰ <strong>確認時間：</strong>出發前 3-5 天</p>
+                    <p>🌐 <strong>查詢網站：</strong><br>
+                    <a href="https://www.africansafari.co.jp/" target="_blank">www.africansafari.co.jp</a></p>
+                    <p>📅 <strong>相關日期：</strong>Day 5 (2/20 週五)</p>
+                    <p>⚠️ 冬季最晚入園 15:30，建議事先預約叢林巴士</p>
+                </div>
+                <div class="emergency-item" style="background: linear-gradient(135deg, #E8F5E9, #C8E6C9); border-left-color: #388E3C;">
+                    <h4 style="color: #1B5E20;">📞 重要預約確認</h4>
+                    <p>✅ <strong>已預約項目：</strong></p>
+                    <p>• 馬櫻晚餐 (2/16 18:30)</p>
+                    <p>• 高千穗峽划船 (2/18 09:30) - 2艘</p>
+                    <p>🔔 <strong>建議預約項目：</strong></p>
+                    <p>• 由布まぶし「心」金鱗湖本店 (2/20 午餐)</p>
+                    <p>• 九州自然動物園叢林巴士 (2/20)</p>
+                </div>
+            </div>
+        </div>
+
         <!-- Flight Info -->
         <div class="flight-info">
             <h3>✈️ 航班資訊</h3>
