--- a/index.html
+++ b/index.html
@@ -443,10 +443,25 @@
                     <div class="event-time">12:15 - 13:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍱 <a href="https://maps.google.com/?q=OMO5熊本" target="_blank">市區午餐</a></h3>
+                            <h3>🍱 <a href="https://maps.google.com/?q=とろけるハンバーグ+福よし+熊本" target="_blank">午餐：とろけるハンバーグ 福よし</a> 或 <a href="https://maps.google.com/?q=勝烈亭+新市街本店" target="_blank">勝烈亭 新市街本店</a></h3>
                         </div>
-                        <p class="event-desc">在 OMO5 附近或鶴屋百貨享用快速午餐，準備參加部長見面會</p>
+                        <p class="event-desc">選項1：福よし - 熊本人氣漢堡排專門店，入口即化的美味</p>
+                        <p class="event-desc">選項2：勝烈亭 - 熊本炸豬排名店，酥脆多汁</p>
+                        <a href="https://maps.google.com/?q=とろけるハンバーグ+福よし+熊本" target="_blank" class="map-link">📍 福よし</a>
+                        <a href="https://maps.google.com/?q=勝烈亭+新市街本店" target="_blank" class="map-link">📍 勝烈亭</a>
                         <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            <strong>とろけるハンバーグ 福よし：</strong><br>
+                            🍔 招牌入口即化漢堡排<br>
+                            🕐 營業時間：11:00～15:00 / 17:00～21:00<br>
+                            📅 定休日：週二<br>
+                            💰 預算：約 ¥5,000（4人）<br><br>
+                            <strong>勝烈亭 新市街本店：</strong><br>
+                            🥩 熊本名物炸豬排定食<br>
+                            🕐 營業時間：11:00～15:00 / 17:00～21:00<br>
+                            📅 定休日：不定休<br>
+                            💰 預算：約 ¥6,000（4人）
+                        </div>
                     </div>
                 </div>
 
@@ -580,12 +595,12 @@
                  <table>
                      <tr><td>🚌 機場利木津巴士（4人）</td><td>¥4,800 (約 NT$ 1,056)</td></tr>
                      <tr><td>🚃 路面電車（4人往返）</td><td>¥680 (約 NT$ 150)</td></tr>
-                     <tr><td>🍱 午餐（市區快餐）</td><td>¥4,000 (約 NT$ 880)</td></tr>
+                     <tr><td>🍱 午餐（福よし或勝烈亭）</td><td>¥5,000-6,000 (約 NT$ 1,100-1,320)</td></tr>
                      <tr><td>🏯 熊本城門票（2大2小）</td><td>¥1,300 (約 NT$ 285)</td></tr>
                      <tr><td>🥩 晚餐 馬櫻</td><td>¥12,000 (約 NT$ 2,640)</td></tr>
                      <tr><td>🛒 唐吉軻德購物</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 6,111（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 6,331-6,551（不含住宿，依午餐選擇而定）</div>
              </div>
          </div>
 
